[metadata]
name = simple_revert
version = 1.1.0
author = Ilya Zverev
author_email = ilya@zverev.info
description = CLI tool and library to revert changes in OpenStreetMap
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
url = https://github.com/Zverik/simple-revert
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Customer Service
    Operating System :: OS Independent
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
packages = simple_revert
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
install_requires =
  requests
  requests_oauthlib

[options.entry_points]
console_scripts =
  simple_revert = simple_revert.simple_revert:main
  restore_version = simple_revert.restore_version:main

[bdist_wheel]
universal=1
